--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,10 @@ dependencies:
   uuid: ^4.5.1
   flutter_svg: ^2.1.0
   path_provider: ^2.1.5
+  firebase_core: ^3.14.0
+  firebase_storage: ^12.4.7
+  image_picker: ^1.1.2
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
